--- a/Kadai/Kadai/Kadai.vcxproj.filters
+++ b/Kadai/Kadai/Kadai.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Reversi.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Time.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Reversi.h">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Time.h">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
